--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
@@ -41,8 +41,7 @@
       <div class="container-md">
         <div class="row min-vh-100 align-items-center align-content-center">
             <div class="col-md-6">
-                
-            </div>
+              </div>
             <div>
               <p>Hello I'm</p>
               <h1>Asandile Langeni</h1>
@@ -50,10 +49,7 @@
               <p class="mt-4 text-muted"></p>
               <a href="#portfolio" class="btn"></a>
           </div>
-            
-                </div>
-            </div>
-        </div>
+      </div>
       </section>
     </main>
     <footer>
