--- a/html/About.html
+++ b/html/About.html
@@ -1,59 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
-</head>
-<body class="bg-dark">
-  <!--Nav Start-->
-  <nav class="navbar bg-dark shadow-sm">
-    <div class="container-lg">
-      <a class="navbar-brand text-black fw-bold fs-4" href="../Index.html">
-        <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
-      </a>
-      <div class="dropdown">
-        <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-         <i class="fas fa-bars"></i>
-        </button>
-        <ul class="dropdown-menu ">
-          <li><a class="dropdown-item" href="../Index.html">Home</a></li>
-          <li><a class="dropdown-item" href="About.html">About</a></li>
-          <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
-          <li><a class="dropdown-item" href="Project.html">Projects</a></li>
-          <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
-          <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
-          <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-<!--Nav end--> 
-  <!--About section start-->
-    <main>
-      <div class="row min-vh-100 align-items-center d-f align-content-center">
-        <div class="col">
-          <p class=" mb-1" id="about-p1">Hello I'm</p>
-                      <p class="mt-4 " id="about-p">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
-                      D.O.B   : 95-10-13 <br>
-                      Location : Cape Town, Khayelitsha <br>
-                      Email     : asandilelangeni@gmail.com <br>
-                      Phone     : 067 6555 678 </p>
-    
-        </div>
-        <div class="col">
-          <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <title>Portfolio</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+      <link rel="stylesheet" href="../styles/style.css">
+      <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
+  </head>
+  <body class="bg-dark">
+    <!--Nav Start-->
+    <nav class="navbar bg-dark shadow-sm">
+      <div class="container-lg">
+        <a class="navbar-brand text-black fw-bold fs-4" href="../Index.html">
+          <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
+        </a>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars"></i>
+          </button>
+          <ul class="dropdown-menu ">
+            <li><a class="dropdown-item" href="../Index.html">Home</a></li>
+            <li><a class="dropdown-item" href="About.html">About</a></li>
+            <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
+            <li><a class="dropdown-item" href="Project.html">Projects</a></li>
+            <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+            <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
+            <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
+          </ul>
         </div>
       </div>
-    </main>
-    <footer>
-      <p>Copyright &copy; 2022</p>
-  </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
-</html>
+    </nav>
+  <!--Nav end--> 
+    <!--About section start-->
+      <main>
+        <div class="row min-vh-100 align-items-center d-f align-content-center">
+          <div class="col">
+            <p class=" mb-1" id="about-p1">Hello I'm</p>
+                        <p class="mt-4 " id="about-p">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
+                        D.O.B   : 95-10-13 <br>
+                        Location : Cape Town, Khayelitsha <br>
+                        Email     : asandilelangeni@gmail.com <br>
+                        Phone     : 067 6555 678 </p>
+            </div>
+          <div class="col">
+            <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>Copyright &copy; 2022</p>
+    </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
+  </html>
